--- a/com.ntn_SaleApp_war_1.0-SNAPSHOT/src/main/resources/templates/products.html
+++ b/com.ntn_SaleApp_war_1.0-SNAPSHOT/src/main/resources/templates/products.html
@@ -1,15 +1,12 @@
-
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Trang chu</title>
-    <th:context th:fragment="resources">
-         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <title>Quản lý sản phẩm</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </th:context>
     </head>
     <body>
-        <nav th:fragment="header" class="navbar navbar-expand-sm bg-dark navbar-dark">
+         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">E-commerce Website</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -23,18 +20,11 @@
                         <li class="nav-item" th:each="c:${categories}">
                             <a class="nav-link" href="#" th:text="${c.name}"></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/stats}">Thống kê</a>
-                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <footer th:fragment="footer">
-            <div class="mt-4 p-5 bg-primary text-white rounded">
-                <h1>Nguyễn Thành Nhật &copy; 2025</h1>
-                <p>eCommerce Website - Mini Project</p>
-            </div>
-        </footer>
+        
+        <h1 class="text-center text-info mt-2">QUẢN LÝ SẢN PHẨM</h1>  
     </body>
 </html>
